--- a/videopuzzle/MainPage.xaml
+++ b/videopuzzle/MainPage.xaml
@@ -42,7 +42,7 @@
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="VIDEO PUZZLE" Style="{StaticResource PhoneTextNormalStyle}" Margin="12,0"/>
-            <TextBlock Text="Play" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock Text="Play" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}" Tap="TextBlock_Tap"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
