--- a/videopuzzle/MainPage.xaml
+++ b/videopuzzle/MainPage.xaml
@@ -41,7 +41,7 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,12,12,0">
-            <TextBlock Text="Video Puzzle" Style="{StaticResource PhoneTextTitle2Style}" Margin="12,12"/>
+            <TextBlock Text="Sliding Puzzle" Style="{StaticResource PhoneTextTitle2Style}" Margin="12,12"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
