--- a/videopuzzle/Settings.xaml
+++ b/videopuzzle/Settings.xaml
@@ -25,7 +25,7 @@
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,12">
             <TextBlock Text="Sliding Puzzle" Style="{StaticResource PhoneTextTitle2Style}" Margin="12,12,12,0"/>
-            <TextBlock TextWrapping="Wrap" Text="settings" VerticalAlignment="Top" FontSize="72"/>
+            <TextBlock Style="{StaticResource PhoneTextTitle1Style}" Text="settings" VerticalAlignment="Top"/>
         </StackPanel>
         <!--ContentPanel - place additional content here-->
         <StackPanel Grid.Row="1" Margin="17,0,0,28">
