--- a/videopuzzle/MainPage.xaml
+++ b/videopuzzle/MainPage.xaml
@@ -1,5 +1,4 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="videopuzzle.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -7,6 +6,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:tk="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+    xmlns:CustomTile="clr-namespace:CustomTile"
+    x:Class="videopuzzle.MainPage"
     mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -14,17 +15,30 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="True">
 
-    <!--LayoutRoot is the root grid where all page content is placed-->
+    <phone:PhoneApplicationPage.ApplicationBar>
+        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
+            <shell:ApplicationBar.MenuItems>
+                <shell:ApplicationBarMenuItem Click="ApplicationBarMenuItemSettings_Click" Text="settings..."/>
+                <shell:ApplicationBarMenuItem Click="ApplicationBarMenuItemAbout_Click" Text="about"/>
+            </shell:ApplicationBar.MenuItems>
+            <shell:ApplicationBarIconButton IconUri="/Assets/Images/new.png" Text="Open" Click="ApplicationBarNew_Click"/>
+            <shell:ApplicationBarIconButton IconUri="/Assets/Images/feature.camera.png" Text="Live" Click="ApplicationBarLive_Click"/>
+            <shell:ApplicationBarIconButton x:Name="reshuffleButton" IconUri="/Assets/Images/refresh.png" Text="Reshuffle" Click="ApplicationBarShuffle_Click"/>
+            <shell:ApplicationBarIconButton IconUri="/Assets/Images/next.png" Text="Next" Click="ApplicationBarNext_Click"/>
+        </shell:ApplicationBar>
+    </phone:PhoneApplicationPage.ApplicationBar>
+
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
+
         <Grid x:Name="TitlePanel" Grid.Row="0" Margin="12,12,12,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="150" />          
+                <ColumnDefinition Width="150" />
             </Grid.ColumnDefinitions>
             <TextBlock Text="Sliding Puzzle" Style="{StaticResource PhoneTextTitle2Style}" Margin="12,12"/>
             <TextBlock Grid.Column="1" TextAlignment="Right" x:Name="PlayTimer" Style="{StaticResource PhoneTextTitle2Style}" FontFamily="fonts/Digit.ttf#Digit" Margin="12,12"/>
@@ -34,24 +48,11 @@
             <Canvas x:Name="MainGrid" Width="450" Height="600" ManipulationStarted="MainGrid_ManipulationStarted">
                 <ProgressBar x:Name="progressbarIndeterminateDownload" Height="46" Canvas.Left="10" Canvas.Top="249" Width="440" IsIndeterminate="True" Canvas.ZIndex="1" Visibility="Collapsed"/>
                 <TextBlock x:Name="progressbarDescription" Canvas.Left="185" TextWrapping="Wrap" Text="Loading..." Canvas.Top="268" Width="90" Canvas.ZIndex="1" Visibility="Collapsed"/>
-                <Button  x:Name="playButton" Canvas.ZIndex="1" Width="300" Height="100" Margin="75, 400, 75, 0" Tap="playButton_Tap" Background="#7F000000" Visibility="Visible" Foreground="White">Play</Button>
+                <Button  x:Name="playButton" Canvas.ZIndex="1" Width="300" Height="100" Margin="75, 400, 75, 0" Tap="playButton_Tap" Background="#7F000000" Visibility="Visible" Foreground="White" Content="Play"/>
             </Canvas>
         </Grid>
 
         <!--<Image Source="/Assets/AlignmentGrid.png" VerticalAlignment="Top" Height="800" Width="480" Margin="0,-32,0,0" Grid.Row="0" Grid.RowSpan="2" IsHitTestVisible="False" />-->
     </Grid>
-
-    <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
-            <shell:ApplicationBarIconButton IconUri="/Assets/Images/new.png" Text="Open" Click="ApplicationBarNew_Click"/>
-            <shell:ApplicationBarIconButton IconUri="/Assets/Images/feature.camera.png" Text="Live" Click="ApplicationBarLive_Click"/>
-            <shell:ApplicationBarIconButton x:Name="reshuffleButton" IconUri="/Assets/Images/refresh.png" Text="Reshuffle" Click="ApplicationBarShuffle_Click"/>
-            <shell:ApplicationBarIconButton IconUri="/Assets/Images/next.png" Text="Next" Click="ApplicationBarNext_Click"/>
-            <shell:ApplicationBar.MenuItems>
-                <shell:ApplicationBarMenuItem Click="ApplicationBarMenuItemSettings_Click" Text="settings..."/>
-                <shell:ApplicationBarMenuItem Click="ApplicationBarMenuItemAbout_Click" Text="about"/>
-            </shell:ApplicationBar.MenuItems>
-        </shell:ApplicationBar>
-    </phone:PhoneApplicationPage.ApplicationBar>
 
 </phone:PhoneApplicationPage>
